edit text added

--- a/settings/src/main/res/layout/fragment_setting.xml
+++ b/settings/src/main/res/layout/fragment_setting.xml
@@ -7,6 +7,17 @@
     tools:context="com.example.settings.SettingFragment"
     >
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="Enter some text and press set Result and navigate back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <TextView
         android:id="@+id/text_setting"
         android:layout_width="match_parent"
