--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -8,4 +8,9 @@
     <include app:graph="@navigation/mobile_navigation" />
 
     <include app:graph="@navigation/setting_navigation" />
+
+<!--
+For navigation without deep links see ->
+https://itnext.io/android-multimodule-navigation-with-the-navigation-component-99f265de24
+-->
 </navigation>
